# RobotIX_match

./: CMakeLists (copy).txt  CMakeLists.txt
Client/: client.cpp
Kinect2/: Kinect2.cpp  Kinect2.h  Kinect2Test.cpp  Kinect2Test.h  Vision_Gait0.cpp  Vision_Gait0.h
Server/: Calibration.cpp  Calibration.h  ClimbStair.cpp  ClimbStair.h  ForceRecover.cpp  ForceRecover.h  FreeGait.cpp  FreeGait.h  FreeGaitAlgorithms.cpp  FreeGaitAlgorithms.h  FreeGaitBase.cpp  FreeGaitBase.h  GaitGenerator.cpp  GaitGenerator.h  LogReader.cpp  Move_Gait.cpp  Move_Gait.h  PassStepDitch.cpp  PassStepDitch.h  TreePass.cpp  TreePass.h  UpOneSep.h  UpOneStep.cpp  UpOneStep.h  cross_chasm.cpp  cross_chasm.h  main.cpp  move_single_leg.cpp  move_single_leg.h  rofo4.cpp  rofo4.h
VisionSensor/: Kinect2.cpp  Kinect2.h  Velodyne.cpp  Velodyne.h  VisionSensor.cpp  VisionSensor.h  Vision_Gait.cpp  Vision_Gait.h  Vision_Gait0.cpp  Vision_Gait0.h  Vision_Terrain.cpp  Vision_Terrain.h
resource/: Robot_IX.xml  Robot_VIII.xml
